Improve styles and add buttons
Signed-off-by: Ezequiel De Oliveira <ezequiel1de1oliveira@gmail.com>
Co-authored-by: Vitor Leal <vitor_leal2201@hotmail.com>

--- a/src/Path/styles.css
+++ b/src/Path/styles.css
@@ -1,5 +1,5 @@
 .grid-container {
-  margin: 10% auto;
+  margin: 1% auto;
 }
 
 .grid {
@@ -8,4 +8,14 @@
 
 button {
   margin: 2px;
+}
+
+.buttons {
+  margin: 1% auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
 }
